astarte-fdo-protocol/src/v101/snapshots/astarte_fdo_protocol__v101__public_key__tests__pk_body_roundtrip-4.snap
---
source: astarte-fdo-protocol/src/v101/public_key.rs
expression: buf
extension: cbor
snapshot_kind: binary
---
