astarte-fdo-protocol/src/v101/snapshots/astarte_fdo_protocol__v101__public_key__tests__public_key_debug-2.snap
---
source: astarte-fdo-protocol/src/v101/public_key.rs
expression: pub_key
---
PublicKey {
    pk_type: Secp256R1,
    pk_enc: X509,
    pk_body: X509(
        [
            48,
            86,
            48,
            16,
            6,
            7,
            42,
            134,
            72,
            206,
            61,
            2,
            1,
            6,
            5,
            43,
            129,
            4,
            0,
            10,
            3,
            66,
            0,
            4,
            64,
            176,
            247,
            207,
            71,
            211,
            115,
            119,
            21,
            188,
            173,
            213,
            3,
            223,
            127,
            111,
            115,
            10,
            0,
            198,
            131,
            81,
            84,
            43,
            79,
            185,
            69,
            111,
            29,
            166,
            203,
            153,
            56,
            205,
            244,
            104,
            163,
            97,
            231,
            193,
            201,
            186,
            27,
            181,
            147,
            228,
            249,
            219,
            103,
            133,
            249,
            237,
            151,
            81,
            99,
            41,
            157,
            206,
            69,
            112,
            132,
            131,
            70,
            1,
        ],
    ),
}
