astarte-fdo-protocol/src/v101/snapshots/astarte_fdo_protocol__v101__public_key__tests__public_key_debug-3.snap
---
source: astarte-fdo-protocol/src/v101/public_key.rs
expression: pub_key
---
PublicKey {
    pk_type: Secp256R1,
    pk_enc: X5Chain,
    pk_body: X5Chain(
        One(
            X509 {
                cert: 30820215308201bca00302010202147b7f0ec7d15537f9cc331d51ab3886a6962c1223300a06082a8648ce3d0403023062310b30090603550406130258583115301306035504070c0c44656661756c742043697479311c301a060355040a0c1344656661756c7420436f6d70616e79204c7464311e301c06035504030c1566646f2d7365727665722d6578616d706c652d6361301e170d3235313131373136323532335a170d3236313131373136323532335a3062310b30090603550406130258583115301306035504070c0c44656661756c742043697479311c301a060355040a0c1344656661756c7420436f6d70616e79204c7464311e301c06035504030c1566646f2d7365727665722d6578616d706c652d63613056301006072a8648ce3d020106052b8104000a0342000440b0f7cf47d3737715bcadd503df7f6f730a00c68351542b4fb9456f1da6cb9938cdf468a361e7c1c9ba1bb593e4f9db6785f9ed975163299dce457084834601a3533051301d0603551d0e041604147c65103b97156bf41cde6d97212c2b9332aceb05301f0603551d230418301680147c65103b97156bf41cde6d97212c2b9332aceb05300f0603551d130101ff040530030101ff300a06082a8648ce3d0403020347003044022057e75504515b7b83df7b9ed07537e8cdb4861bc3349617b4f91c1395b2fbc10f022014075324fd1781dbc460e96fcbe4e5e73169c7220fcb27deeebcc1670246144f,
                key: 3056301006072a8648ce3d020106052b8104000a0342000440b0f7cf47d3737715bcadd503df7f6f730a00c68351542b4fb9456f1da6cb9938cdf468a361e7c1c9ba1bb593e4f9db6785f9ed975163299dce457084834601,
            },
        ),
    ),
}
